PROJ2/E-2.5.101-Player/wdir_msg/compile.err

Player.java:27: error: not a statement
         (row[i] == row[i + 1] && row[i] != 0) {
         ^
Player.java:27: error: ';' expected
         (row[i] == row[i + 1] && row[i] != 0) {
                                              ^
2 errors


